# ai-trader

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-live.txt  requirements.txt
ai_trader/: __init__.py  config.py
config/: asian_breakout.yaml  asian_breakout_v2.yaml  bb_scalper.yaml  bb_scalper_aggressive.yaml  bb_scalper_btc.yaml  bb_scalper_filtered.yaml  bos_retest_aggressive.yaml  bos_retest_btc.yaml  bos_retest_m5.yaml  bos_retest_scalper.yaml  btcusd.yaml  default.yaml  demo.yaml  ensemble_bb_bos.yaml  ensemble_max.yaml  ensemble_news_vwap.yaml  ensemble_session_news_rich.yaml  ensemble_ultimate.yaml  ensemble_ultimate_max.yaml  ensemble_ultimate_v2.yaml  ensemble_ultimate_v3.yaml  ensemble_ultimate_v3_clean.yaml  ensemble_ultimate_v4.yaml  ensemble_v10_compound_max.yaml  ensemble_v11_compound_max_target.yaml  ensemble_v3_news_cont.yaml  ensemble_v4_news_cont_c2.yaml  ensemble_v5_dual_news.yaml  ensemble_v6_triple_news.yaml  ensemble_v7_chop_robust.yaml  ensemble_v8_ultra_chop.yaml  ensemble_v9_compound.yaml  friday_flush.yaml  liquidity_sweep.yaml  live_demo_hfm.template.yaml  london_orb.yaml  momentum_pullback.yaml  momentum_pullback_aggressive.yaml  mtf_zigzag_bos.yaml  mtf_zigzag_bos_aggressive.yaml  (+42 more)
docs/: HANDOFF.md  HANDOVER.md  PROJECT_OVERVIEW.md  lessons_learned.md  log.md  plan.md  progress.md  todo.md
scripts/: iter28_dow_profile.py  iter28_parse.py  iter28_phase_a.sh  iter29_adaptive_sim.py  iter29_trade_attribution.py  iter30_stability.py  iter30_sweep.py  iter32_compare_configs.py  iter33_ema20_sweep.py  (+28 more)
(+637 files in other folders)
