[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trader"
version = "0.1.0"
description = "Automated XAUUSD trading bot for MetaTrader 5."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
live = ['MetaTrader5>=5.0.45; platform_system=="Windows"']

[tool.setuptools.packages.find]
include = ["ai_trader*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
